Adicionando tema customizado para slides, correções no lstcoq

--- a/Customizações-LaTeX/lstCoq.sty
+++ b/Customizações-LaTeX/lstCoq.sty
@@ -1,5 +1,9 @@
 % lstlisting coq style (inspired from a file of Assia Mahboubi)
 %
+
+\definecolor{darkgreen}{RGB}{0,80,0}%
+\definecolor{darkred}{RGB}{200,0,0}%
+
 \lstdefinelanguage{Coq}{
 %
 % Anything betweeen $ becomes LaTeX math mode
