Convertendo arquivo de utils pessoal para .sty

--- a/Customizações-LaTeX/migs-theme.sty
+++ b/Customizações-LaTeX/migs-theme.sty
@@ -2,6 +2,10 @@
 %
 % Customized by Miguel Nunes for personal use
 
+% migs-theme.sty: Customização pessoal do tema de slides da Udesc (por sua vez uma customização do ru-theme)
+% Criação: 2025-01-12
+% Última Modificação: 2025-01-12
+%                     Criação do arquivo
 
 %%%
 %%% Temas padrão que servem de base
