Adicionando templates de artigos, renomeando pacote de formação de Rocq

--- a/Customizações-LaTeX/old/lstCoq.sty
+++ b/Customizações-LaTeX/old/lstCoq.sty
@@ -1,6 +1,10 @@
 % lstlisting coq style (inspired from a file of Assia Mahboubi)
 %
 
+% Garantindo que vai carregar o xcolor antes desse pacote
+
+\RequirePackage{xcolor}
+
 \definecolor{darkgreen}{RGB}{0,80,0}%
 \definecolor{darkred}{RGB}{200,0,0}%
 
