--- a/Customizações-LaTeX/migs-beamer.sty
+++ b/Customizações-LaTeX/migs-beamer.sty
@@ -28,3 +28,6 @@
   \def\smallskip{}%
   \def\medskip{}%
 }
+
+% Caso um slide seja quebrado com framebreak, isso evita que os novos slides tenham um número sequencial ao final
+\setbeamertemplate{frametitle continuation}{}
