Corrigindo condicionais no pacote migs.sty

--- a/Customizações-LaTeX/Templates/Apresentações/Slides-PT_BR.tex
+++ b/Customizações-LaTeX/Templates/Apresentações/Slides-PT_BR.tex
@@ -26,7 +26,7 @@
 	% Datas bem formatadas
 \usepackage{graphicx}
 	% Melhorias em imagens e gráficos
-\usepackage[ABNTeX, PTthm]{migs}
+\usepackage[abntex, ptthm]{migs}
 	% Meu pacote de customizações
 \usepackage{migs-beamer}
 	% Meu pacote de customizações para slides
