--- a/Customizações-LaTeX/Templates/Artigos/Paper-PT_BR.tex
+++ b/Customizações-LaTeX/Templates/Artigos/Paper-PT_BR.tex
@@ -26,7 +26,7 @@
 	% Comandos e definições matemáticas
 \usepackage{graphicx}
 	% Melhorias em imagens e gráficos
-\usepackage[ABNTeX, PTthm]{migs}
+\usepackage[abntex, ptthm]{migs}
 	% Meu pacote de customizações
 \usepackage{datetime2}
 	% Datas bem formatadas
