Corrigindo pacote beamer

--- a/Customizações-LaTeX/migs-beamer.sty
+++ b/Customizações-LaTeX/migs-beamer.sty
@@ -1,7 +1,10 @@
-% slides-migs.sty: Arquivo que junta todas as coisas (definições, alias, comandos, etc.) de LaTeX/beamer sortidas que são úteis para mim 
+% migs-beamer.sty: Arquivo que junta todas as coisas (definições, alias, comandos, etc.) de LaTeX/beamer sortidas que são úteis para mim 
 % Criação: 2024-11-29
-% Última Modificação: 2025-01-12
-%                     Conversão em .sty
+% Última Modificação: 2025-01-26
+%                     Conversão final em .sty
+
+\NeedsTeXFormat{LaTeX2e}
+\ProvidesPackage{migs-beamer}[2025/01/25 migs's customizations for beamer]
 
 % Slide que mostra a nova seção atual quando ela mudo para ela, de modo mais controlado
 \def\SecT{
